# Chess

./: .gitignore  README.md
C/: CMakeLists.txt  README.md
C++/: CMakeLists.txt  README.md
C++/src/: main.cpp
C++/src/Board/: Board.cpp  Board.h
C++/src/Pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rook.cpp  Rook.h
C++/src/Utils/: Movement.cpp  Movement.h
C/src/: main.c
C/src/Board/: Board.c  Board.h
C/src/Pieces/: Piece.c  Piece.h
C/src/Utils/: Movement.c  Movement.h
GoLang/: README.md
GoLang/src/: main.go
GoLang/src/Board/: Board.go
GoLang/src/Pieces/: Piece.go
GoLang/src/Utils/: Movement.go
Java/: README.md
Java/src/: Main.java
Java/src/Board/: Board.java
Java/src/Pieces/: Empty.java  King.java  Piece.java  Queen.java  Rook.java
Java/src/Utils/: Movement.java
Python/: README.md
Python/src/: main.py
Python/src/Board/: Board.py
Python/src/Pieces/: Bishop.py  King.py  Knight.py  Pawn.py  Piece.py  Queen.py  Rook.py
Python/src/Utils/: Movement.py
Ruby/: README.md
Ruby/src/: main.rb
Ruby/src/Board/: Board.rb
Ruby/src/Pieces/: Piece.rb
Ruby/src/Utils/: Movement.rb
Rust/: README.md
Rust/src/: main.rs
Rust/src/board/: board.rs
Rust/src/utils/: mod.rs  movement.rs  piece.rs
Swift/: README.md
Swift/src/: chess  main.swift
Swift/src/Board/: Board.swift
src/: Main.java
src/Board/: Board.java
src/Pieces/: Bishop.java  King.java  Knight.java  Pawn.java  Piece.java  Queen.java  Rook.java
src/Utils/: Movement.java
(+2 files in other folders)
